Zmiany separatora